# claude_for_good_25

./: .gitignore  CLAUDE.md  README.md  SUMMARY.md  db.sqlite  example_ui.html  example_ui.tsx  pyproject.toml  requirements.txt  test_fuzzy_matching.py  test_grading.py  view_data.py
app/: auth.py  auth_routes.py  database.py  essay_grader.py  jwtsign.py  jwtvalidate.py  main.py  models.py
app/api/: canvas.py
app/api/tests/: test_canvas_ingest.py  test_pdf_extractor.py
app/utils/: __init__.py  pdf_extractor.py
data/submissions/790778/: rubric.txt
data/submissions/790778/1334186/: Hackathon+Ideas.txt
documentation/: ESSAY_GRADING_GUIDE.md  HIGHLIGHTING_LOGIC.md  QUICKSTART.md
example_essays/: bad_essay.txt  essay.txt
example_rubrics/: sample_rubric.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: app.tsx  main.tsx
frontend/frontend/src/api/: axios.ts
frontend/frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx
frontend/frontend/src/types/: auth.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Logo.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: button.tsx  input.tsx  textarea.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: GradingPage.tsx  Home.tsx  LoginPage.tsx  ResultsPage.tsx  SignupPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
