[project]
name = "claude-for-good-25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.18.0",
    "fastapi>=0.95.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlmodel>=0.0.8",
    "uvicorn[standard]>=0.20.0",
]
